fixed image spacing

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -23,6 +23,8 @@ $table-cell-padding: 1em 0.75em;
 }
 
 .content img {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     display: block;
     margin: auto;
     border-radius: 1px;
